Word-avusteinen kieliopin korjaus

--- a/tex/jarjestelmat_sahkon_tuottajina.tex
+++ b/tex/jarjestelmat_sahkon_tuottajina.tex
@@ -18,13 +18,13 @@ Lähes kaikki verkon käyttöpaikat ovat verkonhaltijan sähkömittarin takana. 
 
   Kennot ryhmitellään usein moduuleiksi, joiden kanssa rinnan kytketään ohitusdiodit. Jos kennot varjostuvat, ohitusdiodi ohittaa kyseisen moduulin, jossa varjostuneet kennot sijaitsevat, jolloin se ei aiheuta häviöitä muualla rajoittamalla muiden moduulien tai paneeleiden virtaa. Usein aurinkopaneelit ketjutetaan tarvittavan jännitteen saamiseksi, jolloin ohitusdiodien apu varjostustilanteissa on erittäin tärkeää, sillä muuten varjostuskohta rajoittaisi koko paneeliketjun virtaa. \parencite{Willeke&Weber}
 
-  Aurinkokennojen ja -paneelien toimintakäyrinä käytetään usein virta--jännite-käyrää ja siitä johdettua teho--jännite (engl. P--V) -käyrää. \begin{figure}[h]
+  Aurinkokennojen ja -paneelien toimintakäyrinä käytetään usein virta--jännitekäyrää ja siitä johdettua teho--jännitekäyrää (engl. P--V). \begin{figure}[h]
     \centering
     \includegraphics[width=\textwidth]{figures/pvcurve}
     \caption[Esimerkki P--V-käyrästä]{Esimerkki P--V-käyrästä. Perustuen lähteeseen \parencite{JASolar}}
-  \end{figure} Kuten kuvasta 2.2 nähdään, P--V-käyrän huippukohdan sijainti vaihtelee valaisutehon mukaan. Tätä käyrän huippukohtaa kutsutaan huipputehopisteeksi (engl. maximum power point, MPP). Se näyttää jännitteen, jolla saavutetaan kennon tai paneelin huipputeho kullakin valaisuteholla.
+  \end{figure} Kuten kuvasta 2.2 nähdään, P--V-käyrän huippukohdan sijainti vaihtelee valaisutehon mukaan. Tätä käyrän huippukohtaa kutsutaan huipputehopisteeksi (engl. Maximum Power Point, MPP). Se näyttää jännitteen, jolla saavutetaan kennon tai paneelin huipputeho kullakin valaisuteholla.
 
-  Piirillä, jossa on sarjaan kytkettyjä aurinkopaneeleita, on jokaisella paneelilla oma paikallinen huipputehopisteensä (engl. MPP - Maximum Power Point), mutta myös koko piirillä on yhteinen globaali huipputehopiste. Globaali huipputehopiste muuttuu varjostusten ja pilvisyyden mukaan koko järjestelmän tasolla ja sitä tarkkailemalla saadaan selville, millä jännitteellä koko järjestelmästä saadaan suurin teho.
+  Piirillä, jossa on sarjaan kytkettyjä aurinkopaneeleita, on jokaisella paneelilla oma paikallinen huipputehopisteensä, mutta myös koko piirillä on yhteinen globaali huipputehopiste. Globaali huipputehopiste muuttuu varjostusten ja pilvisyyden mukaan koko järjestelmän tasolla ja sitä tarkkailemalla saadaan selville, millä jännitteellä koko järjestelmästä saadaan suurin teho.
 
 \section{Invertterit}
   Invertteri eli vaihtosuuntaaja on laite, joka muuttaa tasasähköä vaihtosähköksi. Invertterin sisääntulojännite vaihtelee käyttötarkoituksen mukaan: kaupalliseen käyttöön tai suurempiin järjestelmiin tarkoitetut laitteet toimivat korkealla, jopa \SI{1500}{\volt} jännitteellä, koska niissä on pidemmät johdotusmatkat ja suurempi määrä paneeleita kytkettynä sarjaan. Kuluttajakäytössä taas voidaan käyttää selvästi pienemmän tason jännitteitä johdotusten ollessa huomattavasti lyhyempiä ja paneeleiden määrän ollessa pienempi.
@@ -62,23 +62,23 @@ Lähes kaikki verkon käyttöpaikat ovat verkonhaltijan sähkömittarin takana. 
 
   Teholuokaltaan pienet ketjuinvertterit on suunniteltu käyttäjäystävällisyyshuomioiden, ja esimerkiksi SMA:n ja Huawein invertterit sisältävät integraation valmistajien taustajärjestelmiin. SMA on toteuttanut tämän integraation valmiina laitteelle, kun taas osa Huawein inverttereistä vaatii sovittimen Ethernet-portin, WLAN:in tai matkapuhelinverkon käyttämiseen datasiirrossa.
 
-  SMA:n invertterit käyttävät lisäksi SunSpec Alliancen Modbus-standardia, joka toimii Ethernet-portin välityksellä. Muut standardia hyödyntävät valmistajat voivat kommunikoida suoraan SMAn inverttereiden kanssa standardoinnin takia. Huawei käyttää myös Modbus-protokollaa, mutta se ei ole SunSpec Alliancen standardoima. Tämä tarkoittaa, että Huawein kanssa kommunikoitaessa sille on räätälöitävä ohjelmistoa datan lukemiseksi. \parencite{SMAManual, Huawei}
+  SMA:n invertterit käyttävät lisäksi SunSpec Alliancen SunSpec Modbus -standardia, joka toimii Ethernet-verkon välityksellä. Muut standardia hyödyntävät valmistajat voivat kommunikoida suoraan SMAn inverttereiden kanssa standardoinnin takia. Huawei käyttää myös Modbus-protokollaa, mutta se ei ole SunSpec Alliancen standardoima. Tämä tarkoittaa, että Huawein kanssa kommunikoitaessa sille on räätälöitävä ohjelmistoa datan lukemiseksi. \parencite{SMAManual, Huawei}
 
   Modbusin hyödyntäminen mahdollistaa muiden valmistajien tuotteiden kommunikaation inverttereiden kanssa. Yhteinen standardi helpottaa suurissa järjestelmissä eri valmistajien tuotteiden yhteensopivuuden kanssa, mutta ylipäätään Modbusin käyttö antaa mahdollisuuden kolmannen osapuolen tuotteiden liittämiseen.
 
 \section{Järjestelmien tuotto-ominaisuudet}
-  Aurinkosähköjärjestelmät ovat sähköntuottajina teholtaan nopeasti muuttuvia. Niiden tuoton ennustaminen on jokseenkin mahdollista päivätasolla, mutta tuntitehon ennustaminen on jo haastavaa sääennusteesta riippuen. Toisaalta, kun tuotannon määrä verkossa kasvaa, eri sijainnissa olevat järjestelmät tasaavat näitä tuotannon vaihteluita ja suuressa kuvassa niiden kokonaistuotantokäyrä "pehmenee". Tätä on tutkittu tuulivoiman osalta, joka sähköntuottajana on aurinkosähkön kanssa samankaltainen. \parencite{FluctuationIssues}
+  Aurinkosähköjärjestelmät ovat sähköntuottajina teholtaan nopeasti muuttuvia. Niiden tuoton ennustaminen on jokseenkin mahdollista päivätasolla, mutta tuntitehon ennustaminen sääennusteen perusteella on jo haastavaa. Toisaalta, kun tuotannon määrä verkossa kasvaa, eri sijainnissa olevat järjestelmät tasaavat näitä tuotannon vaihteluita ja suuressa kuvassa niiden kokonaistuotantokäyrä ''pehmenee''. Tätä on tutkittu tuulivoiman osalta, joka sähköntuottajana on aurinkosähkön kanssa samankaltainen. \parencite{FluctuationIssues}
   
   Nykyisellä keskitettyyn sähköntuotantoon rakennetulla verkolla aurinkosähköjärjestelmät tuovat haasteita, sillä pientuotantoa lisätessä johtolähtöjen jännitetasot nousevat ja verkon suojaustoimintoja voidaan joutua päivittämään. Esimerkiksi mikrotuotanto voi aiheuttaa vikavirtasuojauksen virhelaukaisun, mikäli tuotanto on lähellä muuntajan kiskoa ja se alkaa syöttämään läheisen lähdön vikatilanteessa vikavirtaa kiskoa kohti. Tällöin terveessä lähdössä tapahtuu virhelaukaisu. \parencite{Mikrotuotanto}
   
-  Aurinkosähkön osuuden kasvaminen sähköntuotannossa lisää säädettävän tuotantokapasiteetin tarvetta sähkömarkkinoilla. Päivän aikana nettotehonmuutos on suuri, kun aurinkosähköjärjestelmät alkavat tuottaa sähköä samalla, kun kysyntä laskee ihmisten lähtiessä töihin. Vastaavasti sama tapahtuu illasta kun ihmiset palaavat töistä ja järjestelmän tuottoteho laskee. Tätä ilmiötä kuvaa niin sanottu "duck"-käyrä, joka nähdään kuvassa 2.3. \begin{figure}
+  Aurinkosähkön osuuden kasvaminen sähköntuotannossa lisää säädettävän tuotantokapasiteetin tarvetta sähkömarkkinoilla. Päivän aikana nettotehonmuutos on suuri, kun aurinkosähköjärjestelmät alkavat tuottaa sähköä samalla, kun kysyntä laskee ihmisten lähtiessä töihin. Vastaavasti sama tapahtuu illalla kun ihmiset palaavat töistä ja järjestelmän tuottoteho laskee. Tätä ilmiötä kuvaa niin sanottu ''duck''-käyrä, joka nähdään kuvassa 2.3. \begin{figure}
     \centering
     \includegraphics[width=1.1\textwidth]{figures/Duck_curve.png}
-    \caption{"Duck"-käyrä}
+    \caption{''Duck''-käyrä}
   \end{figure} Se kuvaa säädettävän energiatuotannon keskimääräistä hetkellistä tuotantotehoa vuorokauden aikana. \parencite{duckCurve}
 
   Tuotantokapasiteetin tarvetta voidaan helpottaa energiavarastojen avulla, jolloin päivän energiantuotantoa saadaan siirrettyä illan huippukuormituksen ajalle. Energiavarastot tasaavat myös aurinkosähkön tuotannon ailahtelevuutta. Ongelmana energiavarastojen määrän lisääntymisessä on kuitenkin niiden korkea hankintahinta ja niistä saatavat hyödyt.
 
   Yksittäiselle kuluttajalle energiavarastoista saatavat hyödyt tulevat tuotetun sähkön hyödyntämisestä kalliimman sähkönhinnan aikaan, sillä kuluttajan saama tuotto myydystä sähköstä on pienempi kuin itse kulutetun energian hinta. Lisäksi tuottaja voi haluta kodistaan enemmän energiaomavaraisen ja käyttää tuotetun sähkön kokonaan itse. Mikäli kuluttajalla ei ole kulutusjoustoon soveltuvia laitteita, voi se hyödyntää energiavarastoa tuotetun sähkön hyödyntämiseen tuotantoajan ulkopuolella.
   
-  Tuottajalla on taas useampi syy energiavarastojen hyödyntämiseen. Matala sähköstä saatava markkinahinta on myös tuottajalla syy hyödyntää energiavarastoa, varsinkin jos hinta on tuotantohuipun aikaan matala. Tulevaisuudessa myös verkkokoodi voi pakottaa tuotantolaitokset investoimaan energiavarastoon sähköverkon vakauden ja jännitteen laadun ylläpitämiseksi. Vaikka verkkokoodi ei pakottaisi investoimaan energiavarastoon, voi se olla kannattavaa, jos verkonhaltija joutuisi vahvistamaan verkkoa ja liittyjän kustannukset nousisi muuten. Tariffihinnoittelun muuttuminen tulevaisuudessa tehopohjaiseksi kannustaa yrityksiä investoimaan myös energiavarastoihin, sillä niillä voidaan loiventaa kulutushuippua, jolloin tariffimaksu pienenee.
+  Tuottajalla on taas useampi syy energiavarastojen hyödyntämiseen. Matala sähköstä saatava markkinahinta on myös tuottajalla syy hyödyntää energiavarastoa, varsinkin jos hinta on tuotantohuipun aikaan matala. Tulevaisuudessa myös verkkokoodi voi pakottaa tuotantolaitokset investoimaan energiavarastoon sähköverkon vakauden ja jännitteen laadun ylläpitämiseksi. Vaikka verkkokoodi ei pakottaisi investoimaan energiavarastoon, voi se olla kannattavaa, jos verkonhaltija joutuisi vahvistamaan verkkoa ja liittyjän kustannukset nousisivat muuten. Tariffihinnoittelun muuttuminen tulevaisuudessa tehopohjaiseksi kannustaa yrityksiä investoimaan myös energiavarastoihin, sillä niillä voidaan loiventaa kulutushuippua, jolloin tariffimaksu pienenee.
