--- a/tex/yhteenveto.tex
+++ b/tex/yhteenveto.tex
@@ -6,11 +6,11 @@ Lämpöpumppujen lisääntyminen ja esimerkiksi suorasta sähkölämmityksestä 
 
 Järjestelmien tuomia haasteita voidaan ratkaista ja löytää uusia järjestelmiä hyödyntäviä sovelluksia, kun kommunikaatio niiden kanssa mahdollista. Kommunikointi mahdollistetaan standardoiduilla kommunikaatiorajapinnoilla, joiden kautta järjestelmiä voidaan ohjata. Tällöin ne voidaan kytkeä esimerkiksi kiinteistöautomaatioon tai muuhun ulkoiseen ohjaukseen. Valmistajien suljetut pilvipalvelut muodostavat myös erään rajapinnan kommunikaatiolle, joihin pääsy on usein vain valmistajalla ja järjestelmän omistajalla.
 
-Yksi suosituimmista järjestelmien ohjauksen mahdollistavista tekniikoista on Modbus. Modbus-standardi määrittelee fyysisen tason rajapinnat mahdollistaen ohjauksen joko sarja- tai ethernet-liitäntää käyttäen, mikä mahdollistaa protokollan käyttämisen paikallisesti tai internetin yli toimivien etäyhteyksien välityksellä. Modbus-standardin määritellessä kommunikointia vain hyvin matalalla tasolla on sitä helppo soveltaa erilaisiin sovelluksiin ja sen päälle voidaan rakentaa korkeamman tason viestintä- ja ohjausprotokollia. Modbusin päälle voidaan myöskin toteuttaa yksittäisen laitteen ohjaukseen ja monitorointiin tarvittavat sovellukset tai liittäminen kotiautomaatioon osaksi älykästä kotia.
+Yksi suosituimmista järjestelmien ohjauksen mahdollistavista tekniikoista on Modbus. Modbus-standardi määrittelee fyysisen tason rajapinnat mahdollistaen ohjauksen joko sarja- tai Ethernet-liitäntää käyttäen, mikä mahdollistaa protokollan käyttämisen paikallisesti tai internetin yli toimivien etäyhteyksien välityksellä. Modbus-standardin määritellessä kommunikointia vain hyvin matalalla tasolla on sitä helppo soveltaa erilaisiin sovelluksiin ja sen päälle voidaan rakentaa korkeamman tason viestintä- ja ohjausprotokollia. Modbusin päälle voidaan myöskin toteuttaa yksittäisen laitteen ohjaukseen ja monitorointiin tarvittavat sovellukset tai liittäminen kotiautomaatioon osaksi älykästä kotia.
 
-Aurinkosähköjärjestelmien ja energiavarastojen osalta työssä tarkasteltiin muutamia eri rajapintoja, joista tärkein on SunSpec Modbus. Se pohjautuu Modbus-standardiin, ja sen avulla voidaan ohjata energiavarastojen ja aurinkoinverttereiden toimintaa, esimerkiksi rajoittaa tehoa tai säätää loistehontuotantoa. Suurin käyttö tällä rajapinnalla on paikallisessa automaatiossa, esimerkiksi tuotantotietojen käyttö kuormanohjaukseen.
+Aurinkosähköjärjestelmien ja energiavarastojen osalta työssä tarkasteltiin muutamia eri rajapintoja, joista tärkein on SunSpec Modbus. Se pohjautuu Modbus-standardiin, ja sen avulla voidaan ohjata energiavarastojen ja aurinkosähköinverttereiden toimintaa, esimerkiksi rajoittaa tehoa tai säätää loistehontuotantoa. Suurin käyttö tällä rajapinnalla on paikallisessa automaatiossa, esimerkiksi tuotantotietojen käyttö kuormanohjaukseen.
 
-Lämpöpumppujen kohdalla korkeamman tason rajapintoja kuten SG-Ready-ohjausrajapintaa tai Saksalaista EVU-Sperre-ohjausrajapintaa käyttävät sovellukset taas keskittyvät yhden lämpöpumpun sijasta useamman pumpun muodostamaan pooliin. Lämpöpumpupoolin ohjaamista voidaan käyttää erilaisiin sovelluksiin kuten huipputehon rajoittamiseen verkossa tai sähköntuotannon ja -kulutuksen tasapainottamiseen. Aggregaattorin hallinnoimaa lämpöpumppupoolia voidaan käyttää esimerkiksi kysyntäjouston tehokkaaseen toteuttamiseen. Aggregaattorille lämpöpumpupoolin ohjaaminen taas on pääasiallista liiketoimintaa, jolla se osallistuu sähkömarkkinoille.
+Lämpöpumppujen kohdalla korkeamman tason rajapintoja kuten SG-Ready-ohjausrajapintaa tai Saksalaista EVU-Sperre-ohjausrajapintaa käyttävät sovellukset taas keskittyvät yhden lämpöpumpun sijasta useamman pumpun muodostamaan pooliin. Lämpöpumppupoolin ohjaamista voidaan käyttää erilaisiin sovelluksiin kuten huipputehon rajoittamiseen verkossa tai sähköntuotannon ja -kulutuksen tasapainottamiseen. Aggregaattorin hallinnoimaa lämpöpumppupoolia voidaan käyttää esimerkiksi kysyntäjouston tehokkaaseen toteuttamiseen. Aggregaattorille lämpöpumppupoolin ohjaaminen taas on pääasiallista liiketoimintaa, jolla se osallistuu sähkömarkkinoille.
 
 Työssä tarkasteltiin kuutta eri sidosryhmää, joista Fingrid on sidoksissa vain aurinkosähköjärjestelmiin. Muut sidosryhmät hyödyntävät eri kommunikaatiorajapintoja eri tarkoituksiin, joista osalle niiden käyttö voi olla myös yrityksen ydinliiketoimintaa.
 
