--- a/tex/sovellukset.tex
+++ b/tex/sovellukset.tex
@@ -14,11 +14,11 @@ Tässä kappaleessa käydään läpi erilaisia rajapintoja hyödyntäviä tai ni
     \item ulko- ja sisälämpötila,
     \item ja erilaiset hälytykset \parencite{Latomaki}.
   \end{itemize}
-  Esimerkiksi lämpöpumpun käyttäjän ollessa poissa kotoa, pystyy hän siitä huolimatta varmistamaan kotinsa lämpötilan ja järjestelmien toimivuuden. Myöskin virhetilanteita pystytään kuittaamaan ja niihin reagoimaan nopeammin.
+  Esimerkiksi lämpöpumpun käyttäjän ollessa poissa kotoa, pystyy hän siitä huolimatta varmistamaan kotinsa lämpötilan ja järjestelmien toimivuuden. Myös virhetilanteita pystytään kuittaamaan ja niihin reagoimaan nopeammin.
 
   Aurinkosähköjärjestelmän tapauksessa monitorointi tarkoittaa pääosin hetkellisen tuoton ja tuottohistorian tarkastelua. Toki tiedoista enemmän kiinnostunut voi myös tarkastella verkon tilaa invertterin kautta, sillä monissa inverttereissä pystyy jo katsomaan esimerkiksi verkon tehokerrointa sekä taajuutta. Etämonitorointia voidaan hyödyntää myös vikatilanteiden seuraamisessa, esimerkiksi SMA:n Smart Connected -palvelun avulla SMA hoitaa vikatilanteiden viestinnän asiakkaalle, sekä hoitaa oikeiden komponenttien tilaamisen huoltoyritykselle \parencite{SmartConnected}. Tällä tavalla asiakas saa laitteen nopeasti toimintakuntoon, eikä huoltoyrityksen tarvitse käydä ensin paikan päällä tarkistamassa laitetta vaan voi suoraan hoitaa huollon alusta loppuun.
 
-  Kun lämpöpumppua pystytään monitoroinnin lisäksi myös ohjaamaan etänä, puhutaan etähallinnasta. Toisin kuin pelkästä monitoroinnista, lämpöpumpun etähallinnasta saattaa olla enemmän käytännön hyötyä myös omakotitaloasujalle. Etähallinnalla voidaan saavuttaa energian säästöä eri tavoilla. Etähallinta mahdollistaa muun muassa matalamman sisälämpötilan ylläpitämisen asukkaiden ollessa poissa, minkä jälkeen voidaan nostaa asunnon lämpötilaa juuri ennen asukkaiden paluuta kotiin. Kesällä sama periaate pätee jäähdytykseen, mikäli käytettävä lämpöpumppu toimii myös jäähdyttävänä järjestelmänä. Tälläistä saatetaan kutsua esimerkiksi lomatoiminnoksi. Etähallintasovelluksesta on myöskin helppo tehdä intuitiivinen käyttää, koska käyttöliittymä voidaan tuoda kiinteästi lämpöpumpun yhteyteen asennetuista sulautetuista käyttöliittymistä käyttäjän omalle laitteelle.
+  Kun lämpöpumppua pystytään monitoroinnin lisäksi myös ohjaamaan etänä, puhutaan etähallinnasta. Toisin kuin pelkästä monitoroinnista, lämpöpumpun etähallinnasta saattaa olla enemmän käytännön hyötyä myös omakotitaloasujalle. Etähallinnalla voidaan saavuttaa energian säästöä eri tavoilla. Etähallinta mahdollistaa muun muassa matalamman sisälämpötilan ylläpitämisen asukkaiden ollessa poissa, minkä jälkeen voidaan nostaa asunnon lämpötilaa juuri ennen asukkaiden paluuta kotiin. Kesällä sama periaate pätee jäähdytykseen, mikäli käytettävä lämpöpumppu toimii myös jäähdyttävänä järjestelmänä. Tällaista saatetaan kutsua esimerkiksi lomatoiminnoksi. Etähallintasovelluksesta on myös helppo tehdä intuitiivinen käyttää, koska käyttöliittymä voidaan tuoda kiinteästi lämpöpumpun yhteyteen asennetuista sulautetuista käyttöliittymistä käyttäjän omalle laitteelle.
 
   Aurinkosähköjärjestelmän etähallinnalla ei kotitalouksissa ole tarvetta, sillä järjestelmä on suunniteltu toimimaan jatkuvasti parhaalla tuotolla. Etähallinnasta voi tosin olla kiinnostunut tulevaisuudessa verkonhaltija ja aggregaattori, sillä ne voivat muuttaa esimerkiksi järjestelmän käyttäytymistä eri jännite- tai taajuusalueilla, tai pakottaa koko järjestelmän pysäyttämisen esimerkiksi verkon huoltotöiden ajaksi. Tällä hetkellä etäkäytön estää oikeastaan puuttuvat järjestelmäintegraatiot, sillä nykyisiin energiamittareihin ei ole integroitu kommunikaatiota ulkoisille laitteille. Aurinkoinverttereiden integrointi verkonhaltijan \gls{SCADA}-järjestelmään on toki mahdollista, mutta se on järkevää vain suuremmissa järjestelmissä nykyisillä standardeilla, sillä verkonhaltijalla ei ole kaksisuuntaista kommunikaatiota kotitalouksiin ennestään.
 
@@ -30,7 +30,7 @@ Tässä kappaleessa käydään läpi erilaisia rajapintoja hyödyntäviä tai ni
 
 \section{Kysyntäjousto}
 
-  Normaalissa keskitetyssä sähköenergiajärjestelmässä sähkötehon kulutus vaihtelee muun muassa vuodenajan, vuorokaudenajan ja sään mukaan. Valmistava suurteollisuus, eli metsä-, metalli- ja kemianteollisuus, kuluttaa noin \SI{40}{\percent} Suomessa käytetystä sähköstä. Tästä johtuen teollisuuden prosessien tila saattaa vaikuttaa merkittävästi järjestelmän tehonkulutukseen \parencite{SVTehk}. Sähköverkosta otetun ja siihen syötetyn tehon pitää jatkuvasti olla yhtä suuret, minkä takia tuotantotehoa pitää säätää. Perinteisessä järjestelmässä tehonkulutuksen muutoksia ennakoidaan ja tehontuotantoa säädellään ajamalla esimerkiksi vesi-, lauhde- ja \gls{CHP}-voimaloita tietyn suunnitelman mukaan. \parencite{energiateollisuus} Niin kutsutut perusvoimalaitokset, kuten esimerkiksi ydinvoimalaitokset ja osa \gls{CHP}-voimaloista taas ajavat käytännössä koko ajan nimellistehollaan tuottaen suurimman osan kulutetusta energiasta. Vuonna 2018 ydinvoimalla ja \gls{CHP}-voimaloilla tuotettiin noin \SI{44}{\tera\watt\hour} sähköä, mikä vastaa hieman alle puolta Suomen vuotuisesta sähköenergiantuotannosta. \parencite{SVTSaLaTuo} Perusvoimalaitoksille tyypillistä on polttoaineen suhteellisen halpa hinta, ja täten kohtuulliset muuttuvat kustannukset investointikustannusten ollessa niihin verrattuna suuria. Myöskin uusiutuvaa energiaa, kuten tuuli- ja aurinkovoimaa ajetaan käytännössä myös jatkuvasti sen hetkisessä maksimitehopisteessä, sillä polttoainekustannuksia ei ole.
+  Normaalissa keskitetyssä sähköenergiajärjestelmässä sähkötehon kulutus vaihtelee muun muassa vuodenajan, vuorokaudenajan ja sään mukaan. Valmistava suurteollisuus, eli metsä-, metalli- ja kemianteollisuus, kuluttaa noin \SI{40}{\percent} Suomessa käytetystä sähköstä. Tästä johtuen teollisuuden prosessien tila saattaa vaikuttaa merkittävästi järjestelmän tehonkulutukseen \parencite{SVTehk}. Sähköverkosta otetun ja siihen syötetyn tehon pitää jatkuvasti olla yhtä suuret, minkä takia tuotantotehoa pitää säätää. Perinteisessä järjestelmässä tehonkulutuksen muutoksia ennakoidaan ja tehontuotantoa säädellään ajamalla esimerkiksi vesi-, lauhde- ja \gls{CHP}-voimaloita tietyn suunnitelman mukaan. \parencite{energiateollisuus} Niin kutsutut perusvoimalaitokset, kuten esimerkiksi ydinvoimalaitokset ja osa \gls{CHP}-voimaloista taas ajavat käytännössä koko ajan nimellistehollaan tuottaen suurimman osan kulutetusta energiasta. Vuonna 2018 ydinvoimalla ja \gls{CHP}-voimaloilla tuotettiin noin \SI{44}{\tera\watt\hour} sähköä, mikä vastaa hieman alle puolta Suomen vuotuisesta sähköenergiantuotannosta. \parencite{SVTSaLaTuo} Perusvoimalaitoksille tyypillistä on polttoaineen suhteellisen halpa hinta, ja täten kohtuulliset muuttuvat kustannukset investointikustannusten ollessa niihin verrattuna suuria. Myös uusiutuvaa energiaa, kuten tuuli- ja aurinkovoimaa ajetaan käytännössä myös jatkuvasti sen hetkisessä maksimitehopisteessä, sillä polttoainekustannuksia ei ole.
 
   Vaikka lauhdevoimalaitoksia käytetään osaltaan säätötehona, niitä ei Suomessa kuitenkaan kannata käyttää tehonkulutuksen lyhytaikaisten vaihteluiden kattamiseen. Normaalissa laudevoimalaitoksessa esimerkiksi käynnistysajat ovat pitkiä ja sekuntitasolla tapahtuva tuotannon lisäys ei ole yhtä edullista kuin vesivoimalla. \parencite{VJV2018} Suomessa yleisesti ja erityisesti sekuntitasolla tapahtuva tehotasapainon säätö tapahtuu pääosin vesivoimalla \parencite{energiateollisuus}, sillä vesivoiman tehontuottoa kyetään säätämään lähes reaaliajassa säätelemällä veden virtausta turbiineille. Sähköenergiajärjestelmässä esiintyvä tehoepätasapaino aiheuttaa muutoksia jännitteen taajuuteen. Ylituotannon aikana voimaloiden generaattoreiden pyörimistä vastustava momentti pienenee, jolloin pyörimisnopeus ja täten jännitteen taajuus pääsee kasvamaan. Alituotannon kohdalla tilanne on päinvastainen. Jännitteen taajuutta seuraamalla kyetään ohjaamaan säätövoiman tuotantoa tai kulutuksen vähentämistä lähes reaaliajassa. \parencite{fingrid}
 
@@ -42,13 +42,13 @@ Tässä kappaleessa käydään läpi erilaisia rajapintoja hyödyntäviä tai ni
 
 \subsection{Virtuaalivoimalat}
 
-  Virtuaalivoimala on yksi tapa toteuttaa kysyntäjoustoa. Virtuaalivoimala koostuu pienistä sähköä tuottavista yksiköistä tai yhdestä tai useammasta kuormasta, joiden tehonkulutusta ohjataan yhtenä yksikkönä. Virtuaalivoimalan haltija voi osallistua sähkömarkkinoille tekniset vaatimukset täyttävällä joustokapasiteetillaan. Fingrid hankkii käyttöönsä eri tyyppisiä reservejä varautuakseen kulutuksen normaaliin vaihteluun tai mahdollisiin häiriötilanteisiin. Fingrid maksaa virtuaalivoimalalle tehoreservin ylläpidosta reservityypistä riippuvaa hintaa. Mikäli reservi aktivoituu käyttöön ja virtuaalivoimala kykenee myös syöttämään sähkötehoa verkkoon, maksaa Fingrid myös syötetystä energiasta. Suuren kulutuksen aikana tai alituotantotilanteessa voimalaan kuuluvissa kiinteistöissä tai muissa kulutuskohteissa vähennetään sähkön käyttöä hetkellisesti. Vastaavasti ylituotantotilanteessa virtuaalivoimala kasvattaa kulutusta vastaamaan sen hetkistä tuotantoa. Virtuaalivoimalan ohjaus tapahtuu esimerkiksi automaattisesti kantaverkon taajuuden mukaan tai manuaalisesti Fingridin pyynnöstä, riippuen jälleen reservituotteen tyypistä. \parencite{fingrid, reserviLaki}
+  Virtuaalivoimala on yksi tapa toteuttaa kysyntäjoustoa. Virtuaalivoimala koostuu pienistä sähköä tuottavista yksiköistä tai yhdestä tai useammasta kuormasta, joiden tehonkulutusta ohjataan yhtenä yksikkönä. Virtuaalivoimalan haltija voi osallistua sähkömarkkinoille tekniset vaatimukset täyttävällä joustokapasiteetillaan. Fingrid hankkii käyttöönsä erityyppisiä reservejä varautuakseen kulutuksen normaaliin vaihteluun tai mahdollisiin häiriötilanteisiin. Fingrid maksaa virtuaalivoimalalle tehoreservin ylläpidosta reservityypistä riippuvaa hintaa. Mikäli reservi aktivoituu käyttöön ja virtuaalivoimala kykenee myös syöttämään sähkötehoa verkkoon, maksaa Fingrid myös syötetystä energiasta. Suuren kulutuksen aikana tai alituotantotilanteessa voimalaan kuuluvissa kiinteistöissä tai muissa kulutuskohteissa vähennetään sähkön käyttöä hetkellisesti. Vastaavasti ylituotantotilanteessa virtuaalivoimala kasvattaa kulutusta vastaamaan sen hetkistä tuotantoa. Virtuaalivoimalan ohjaus tapahtuu esimerkiksi automaattisesti kantaverkon taajuuden mukaan tai manuaalisesti Fingridin pyynnöstä, riippuen jälleen reservituotteen tyypistä. \parencite{fingrid, reserviLaki}
 
   Osa virtuaalivoimalan ympäristömerkityksestä koostuu siitä, ettei erillistä sähköntuotantolaitteistoa tarvitse rakentaa, vaan toiminta perustuu olemassa olevan tai tarpeeseen rakennettavan laitteiston lisähyödyntämiseen. Mikäli virtuaalivoimala koostuu kulutustaan vähentävistä yksiköistä, ei Fingridin voimalaitoksille tarkoitetut verkkoonliittymismääräykset ole päteviä \parencite{VJV2018}.
 
   Virtuaalivoimala voidaan koostaa kohteista, joissa energiaa saadaan varastoitua väliaikaisesti. Energiaa voidaan varastoida käyttökohteessa esimerkiksi akkuihin, josta esimerkkinä toimii kauppakeskus Sellon virtuaalivoimala Espoossa \parencite{sello}. Myöskin sähköautojen akkuja voidaan käyttää energian varastointiin, tällöin puhutaan \gls{V2G}-tekniikasta \parencite{dictOfEnergy}. Mikäli energiaa varastoidaan itsenäisesti toimivaan suureen akustoon, tai esimerkiksi paineilmavoimalaitokseen tai pumppuvoimalaitokseen, puhutaan silloin yleensä sähköenergian varastoinnista \parencite{dictOfEnergy}, vaikka kyseiset laitokset voisivat toimia myös virtuaalivoimalan osana.
 
-  Kotitalouksien aurinkosähköjärjestelmistä koostuva virtuaalivoimala perustuu akullisten järjestelmien tuottamaan joustoon. Järjestelmässä olevien akkujen ei tarvitse olla kovinkaan suuria, jos niiden määrä sähköjärjestelmässä on suuri. Tällöin voidaan ohjata hyvinkin suurta määrää erittäin nopeasti säätyvää tehoa. Akkujen korkea hinta luo tosin korkean kynnyksen hankinnalle, varsinkin kun kuluttajan saamat hyödyt ei välttämättä ole kovinkaan suuret. Tämän sovelluksen käyttöä rajoittaa kommunikaatiorajapintojen monimutkaisuus samalla tavalla kuin aurinkosähköjärjestelmien etähallintaa; virtuaalivoimalaa hallinnoiva aggregaatti tarvitsee kommunikaatiorajapinnan jokaiseen kohteeseen, sillä nykyisellään sitä ei verkonhaltijalla ole. Tämä on tosin mahdollista toteuttaa, jos virtuaalivoimaloille saataisiin standardoitua rajapinta, sillä silloin valmistajat voisivat integroida tämän rajapinnan heidän omaan verkkopalveluun, eikä järjestelmä vaatisi tällöin fyysisiä muutoksia ollenkaan.
+  Kotitalouksien aurinkosähköjärjestelmistä koostuva virtuaalivoimala perustuu akullisten järjestelmien tuottamaan joustoon. Järjestelmässä olevien akkujen ei tarvitse olla kovinkaan suuria, jos niiden määrä sähköjärjestelmässä on suuri. Tällöin voidaan ohjata hyvinkin suurta määrää erittäin nopeasti säätyvää tehoa. Akkujen korkea hinta luo tosin korkean kynnyksen hankinnalle, varsinkin kun kuluttajan saamat hyödyt eivät välttämättä ole kovinkaan suuret. Tämän sovelluksen käyttöä rajoittaa kommunikaatiorajapintojen monimutkaisuus samalla tavalla kuin aurinkosähköjärjestelmien etähallintaa; virtuaalivoimalaa hallinnoiva aggregaatti tarvitsee kommunikaatiorajapinnan jokaiseen kohteeseen, sillä nykyisellään sitä ei verkonhaltijalla ole. Tämä on tosin mahdollista toteuttaa, jos virtuaalivoimaloille saataisiin standardoitua rajapinta, sillä silloin valmistajat voisivat integroida tämän rajapinnan heidän omaan verkkopalveluunsa, eikä järjestelmä vaatisi tällöin fyysisiä muutoksia ollenkaan.
 
   Lämpöpumpuista koostuvalle virtuaalivoimalalle ominaista on nimenomaan kulutusjouston myyminen. Virtuaalivoimalan toimiessa osana lämmitysjärjestelmää, käytetään esimerkiksi lämminvesivaraajaa tai kiinteistön rakenteita energiavarastona. Kun virtuaalivoimalaa käytetään kompensoimaan alituotantoa, kytketään lämpöpumppu, lämmitysvastus tai muu vastaava sähköä kuluttava toiminta pois päältä. Lämmityslaitteiden poiskytkemisaika on yleensä maksimissaan muutamia tunteja, minkä ansiosta lämmitettävä kiinteistö tai kohde ei ehdi jäähtymään merkittävästi, eikä esimerkiksi asumismukavuudesta tarvitse tinkiä. Sopiva poiskytemisaika riippuu joka tapauksessa lämmitettävän kohteen tyypistä ja rakenteesta. Kun taas kompensoidaan ylituotantoa, voidaan esimerkiksi lämpöpumppuja käyttää maksimitehollaan, kunnes lämminvesivaraaja, kiertovesi tai sisäilma saavuttaa soveltuvan maksimilämpötilansa. Lämpöpuppujen kompressoreiden lisäksi myös lisälämmitysvastuksia voidaan käyttää, jolloin käytetty sähköteho saattaa olla jopa kaksinkertainen.
 
@@ -58,7 +58,7 @@ Tässä kappaleessa käydään läpi erilaisia rajapintoja hyödyntäviä tai ni
 
   Rajoittamalla johdolla syötetyn alueen huipputehoja, saatetaan välttää uusien yhteyksien rakentaminen. Siirtojohdolla tapahtuvat jännitehäviöt ovat myös suurimmillaan suurimman tehonkulutuksen aikana, joten rajoittamalla huipputehoja, pystytään alentamaan johdolla tapahtuvia häviöitä.
 
-  Sopivan lämpöpumppupoolin ohjauksella voidaan alentaa muuntopiirin tai syötetyn alueen huipputehoa. Riippuen alueesta, lämpöpumput ovat hyvä valinta ohjattavaksi kuormaksi. Uusilla rakennettavilla asuinalueilla, missä kaukolämpö ei ole käytössä, on todennäköisesti suurimmassa osassa asuinrakennuksia lämpöpumppu. Myöskin vanhaa rakennuskantaa peruskorjattaessa lämpöpumput valitaan usein lämmitysjärjestelmän osaksi. Normaalissa omakotitalossa lämpöpumppu on todennäköisesti suurin yksittäinen sähköä kuluttava laite, mikä tekee siitä edelleen hyvän valinnan ohjattavaksi kuormaksi.
+  Sopivan lämpöpumppupoolin ohjauksella voidaan alentaa muuntopiirin tai syötetyn alueen huipputehoa. Riippuen alueesta, lämpöpumput ovat hyvä valinta ohjattavaksi kuormaksi. Uusilla rakennettavilla asuinalueilla, missä kaukolämpö ei ole käytössä, on todennäköisesti suurimmassa osassa asuinrakennuksia lämpöpumppu. Myös vanhaa rakennuskantaa peruskorjattaessa lämpöpumput valitaan usein lämmitysjärjestelmän osaksi. Normaalissa omakotitalossa lämpöpumppu on todennäköisesti suurin yksittäinen sähköä kuluttava laite, mikä tekee siitä edelleen hyvän valinnan ohjattavaksi kuormaksi.
 
   Lämpöpumppupoolin ohjauksesta on myös hyötyä hieman pidemmän sähkökatkon yhteydessä. Sähkökatkon kestäessä hieman pidempään, kylmenevät lämpöpumppujen lämmittämät kohteet. Näin ollen sähköjen palatessa, käytännössä kaikki muuntopiirin lämpöpumput käynnistyvät samaan aikaan. Mikäli kaikki tai osa lämpöpumpuista on varustettu suoraan verkkojännitteeseen kytketyllä oikosulkumoottorilla, voi niiden yhteenlaskettu käynnistysvirtapiikin aikainen tehon kulutus olla huomattavan korkea. Mikäli lämpöpumppujen rajapinnat mahdollistavat yksittäisten lämpöpumppujen ohjaamisen keskitetysti, voidaan sähköjen takaisinkytkeytymisen aiheuttamaan kulutuspiikkiä tasoittaa.
 
@@ -85,9 +85,9 @@ Tässä kappaleessa käydään läpi erilaisia rajapintoja hyödyntäviä tai ni
 
   Lämpöpumppuja kytketään verkkoon, jotta käyttäjät voivat etäohjata sitä tai jotta sitä voidaan ohjata aggregaattorin toimesta osana lämpöpumppupoolia. Erään riskityypin muodostavat vahingossa tai huolimattomuuttaan avoimeksi jätetyt ohjausrajapinnat. TCP-portteja voi olla avoinna niin, että kolmas osapuoli voi yrittää avata telnet- tai ssh-yhteyksiä laitteeseen. Mikäli yhteyden saa avattua käyttäen vakiokäyttäjätunnuksia ja -salasanoja, tai mahdollisesti täysin ilman tunnistautumista, ovat laitteet käytännössä kenen tahansa käytettävissä.
 
-  Jos laitteisiin otetaan yhteyttä salaamattomilla protokollilla, voidaan ohjausliikenteestä kerätä tietoja, joiden päätyminen ulkopuolisten käsiin ei ole haluttua. Mahdollisia kerättäviä tietoja voivat olla esimerkiksi asukkaan läsnäolo tai tieto peseytymisajoista, joiden vuotaminen ulkopuolisille voi vaikuttaa vähintääkin turvallisuudentunteeseen. Ammattimainen rikollisuus voi myös käyttää näitä tietoja rikosten suunnitteluun, sillä tiedoilla pystyy määrittämään hyvinkin tarkasti, milloin koti on tyhjillään ja haavoittumaisimmillaan. Myös virtuaalivoimaloiden toiminnan seuraaminen ja mahdollinen häirintä on otettava huomioon mahdollisena uhkakuvana.
+  Jos laitteisiin otetaan yhteyttä salaamattomilla protokollilla, voidaan ohjausliikenteestä kerätä tietoja, joiden päätyminen ulkopuolisten käsiin ei ole haluttua. Mahdollisia kerättäviä tietoja voivat olla esimerkiksi asukkaan läsnäolo tai tieto peseytymisajoista, joiden vuotaminen ulkopuolisille voi vaikuttaa vähintäänkin turvallisuudentunteeseen. Ammattimainen rikollisuus voi myös käyttää näitä tietoja rikosten suunnitteluun, sillä tiedoilla pystyy määrittämään hyvinkin tarkasti, milloin koti on tyhjillään ja haavoittumaisimmillaan. Myös virtuaalivoimaloiden toiminnan seuraaminen ja mahdollinen häirintä on otettava huomioon mahdollisena uhkakuvana.
 
-  Kaapattujen eli luvatta etäohjattujen laitteiden väärinkäyttöön on monia tapoja. Pumppujen voidaan esimerkiksi ohjata tuottamaan omistajilleen ylimääräisiä kuluja tai vaihtamaan asunnon lämpötila täysin vääräksi. Mikäli lämpöpumpun yhteydessä on sulautettuna järjestelmänä esimerkiksi jokin linux- tai windows-käyttöjärjestelmä ohjaamassa pumpun toimintaa, pätevät siihen samat uhkakuvat kuin normaalin kotitietokoneen haltuun ottamiseen. Jos kolmas osapuoli kykenee asentamaan lämpöpumppua ohjaavaan tietokoneeseen omia ohjelmiaan, sitä voidaan käyttää vahingollisiin tarkoituksiin esimerkiksi hajautetun palvelunestohyökkäyksen toteuttamisessa.
+  Kaapattujen eli luvatta etäohjattujen laitteiden väärinkäyttöön on monia tapoja. Pumppujen voidaan esimerkiksi ohjata tuottamaan omistajilleen ylimääräisiä kuluja tai vaihtamaan asunnon lämpötila täysin vääräksi. Mikäli lämpöpumpun yhteydessä on sulautettuna järjestelmänä esimerkiksi jokin Linux- tai Windows-käyttöjärjestelmä ohjaamassa pumpun toimintaa, pätevät siihen samat uhkakuvat kuin normaalin kotitietokoneen haltuun ottamiseen. Jos kolmas osapuoli kykenee asentamaan lämpöpumppua ohjaavaan tietokoneeseen omia ohjelmiaan, sitä voidaan käyttää vahingollisiin tarkoituksiin esimerkiksi hajautetun palvelunestohyökkäyksen toteuttamisessa.
 
   Mikäli kolmannella osapuolella on mahdollisuus käyttää useampaa laitetta yhtä aikaa, voidaan laitteita käyttää esimerkiksi häiriöiden tuottamiseen sähköverkossa, muun muassa äkillisen tehomuutoksen luomiseen tai verkon tehokertoimen säätämiseen. Nämä tuottaisivat lisää juuri niitä ongelmia, joiden ratkaisemiseen rajapintojen hyödyntämisellä pyritään.
 
